--- a/StoredProcedures/PostgreSQL/docker-compose.yml
+++ b/StoredProcedures/PostgreSQL/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - POSTGRES_DB=school
     ports:
       - "5432:5432"
+    volumes:
+      - ./volumes/postgres-dump:/docker-entrypoint-initdb.d
 
   adminer:
     image: adminer
